Fix dark mode for newton

--- a/src/css/games/newton.less
+++ b/src/css/games/newton.less
@@ -38,7 +38,12 @@
 	.tile-quick-action3,
 	.tile-quick-action4,
 	.tile-quick-action5,
-	.tile-quick-action6 {
+	.tile-quick-action6,
+	.tile-dev1_x4_backandfront,
+	.tile-dev2_x4_backandfront,
+	.tile-dev3_x4_backandfront,
+	.tile-dev4_x4_backandfront,
+	.tile-dev5_x4_backandfront {
 		background-image: var(--quick-action-back) !important;
 	}
 
@@ -79,5 +84,30 @@
 
 	.tile-quick-action6 {
 		background-position: .25% 4.4%
+	}
+
+	.tile-dev1_x4_backandfront {
+		background-position: 82.0771% 42.3279%;
+		background-size: 796.887%;
+	}
+
+	.tile-dev2_x4_backandfront {
+		background-position: 96.4824% 42.3279%;
+		background-size: 796.887%;
+	}
+
+	.tile-dev3_x4_backandfront {
+		background-position: .0558347% 51.2612%;
+		background-size: 796.887%;
+	}
+
+	.tile-dev4_x4_backandfront {
+		background-position: 14.4612% 51.2612%;
+		background-size: 796.887%;
+	}
+
+	.tile-dev5_x4_backandfront {
+		background-position: 28.8666% 51.2612%;
+		background-size: 796.887%;
 	}
 }
